Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-64393

painting/qdrawhelper_neon.cpp:1133:108: error: expected ';' after expression

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 5.11.0
    • 5.11
    • GUI: Painting
    • None
    • a71fdceae243f2a6908253dcd29bbcab6559c625

    Description

      https://codereview.qt-project.org/#/c/210674/
      https://testresults.qt.io/coin/integration/qt/qt5/tasks/1510220474
      https://testresults.qt.io/coin/api/results/qt/qtbase/ab545765338d00eb38c8a09ef7776a7cf1f399d5/MacOSMacOS_10_12x86_64IOSIOS_ANYmultiClangqtci-macos-10.12-x86_64-8-c2455cDebugAndRelease_DisableTests_Static/2a48a3b7dcb9652b1532a3ad14de7580b5b9b1ee/build_1510220710/log.txt.gz
      https://testresults.qt.io/coin/api/results/qt/qtbase/ab545765338d00eb38c8a09ef7776a7cf1f399d5/MacOSMacOS_10_12x86_64TvOSTvOS_ANYmultiClangqtci-macos-10.12-x86_64-8-c2455cDebugAndRelease_DisableTests/2a48a3b7dcb9652b1532a3ad14de7580b5b9b1ee/build_1510220711/log.txt.gz
      https://testresults.qt.io/coin/api/results/qt/qtbase/ab545765338d00eb38c8a09ef7776a7cf1f399d5/MacOSMacOS_10_12x86_64WatchOSWatchOS_ANYmultiClangqtci-macos-10.12-x86_64-8-c2455cDebugAndRelease_DisableTests/2a48a3b7dcb9652b1532a3ad14de7580b5b9b1ee/build_1510220771/log.txt.gz

      painting/qdrawhelper_neon.cpp:1133:108: error: expected ';' after expression
                          srcVector = vreinterpretq_u32_u8(vqtbl1q_u8(vreinterpretq_u8_u32(srcVector), rgbaMask))
                                                                                                                 ^
                                                                                                                 ;
      /Users/qt/work/qt/qtbase/bin/moc -DQT_COMPILER_SUPPORTS_SSE2 -DQT_NO_USING_NAMESPACE -DQT_NO_FOREACH -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_GUI_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_CORE_LIB -D__APPLE__ -D__GNUC__=4 -D__APPLE_CC__ -D__cplusplus=199711L -D__APPLE_CC__=6000 -D__clang__ -D__clang_major__=8 -D__clang_minor__=1 -D__clang_patchlevel__=0 -D__GNUC__=4 -D__GNUC_MINOR__=2 -D__GNUC_PATCHLEVEL__=1 -I/Users/qt/work/qt/qtbase/mkspecs/macx-ios-clang -I/Users/qt/work/qt/qtbase/src/gui -I/Users/qt/work/qt/qtbase/mkspecs/common/uikit -I/Users/qt/work/qt/qtbase/include -I/Users/qt/work/qt/qtbase/include/QtGui -I/Users/qt/work/qt/qtbase/include/QtGui/5.11.0 -I/Users/qt/work/qt/qtbase/include/QtGui/5.11.0/QtGui -I/Users/qt/work/qt/qtbase/include/QtCore/5.11.0 -I/Users/qt/work/qt/qtbase/include/QtCore/5.11.0/QtCore -I/Users/qt/work/qt/qtbase/include/QtCore -I/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1 -I/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/clang/8.1.0/include -I/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include -I/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS10.3.sdk/usr/include accessible/qaccessible.h -o .moc/release/moc_qaccessible.cpp
      1 error generated.
      make[3]: *** [.obj/release/qdrawhelper_neon.o] Error 1
      make[3]: *** Waiting for unfinished jobs....
      make[2]: *** [release-all] Error 2
      make[1]: *** [sub-gui-make_first] Error 2
      make: *** [sub-src-make_first] Error 2
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            liaqi Liang Qi
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes