Add a missing semicolon in painting/qdrawhelper_neon.cpp

This amends f8807b82207d7f4f41536f777473c8870673c186.

Q_PROCESSOR_ARM_64 was only tested in qt5 integration.

Task-number: QTBUG-64393
Change-Id: I4471c2db3dc07e47e1825c2539c32c4d2a073396
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>